# learning-center

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
learning_center/: __init__.py  admin.py  extensions.py  form.py  models.py  settings.py
learning_center/blueprints/: admin.py
learning_center/templates/: admin_dashboard.html  base.html
learning_center/templates/admin/: admin_dashboard.html  auth.html
tests/: test_learning_center.py
