[tool.poetry]
name = "learning-center"
version = "0.1.0"
description = ""
authors = ["alpden550 <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-debugtoolbar = "^0.10.1"
flask-sqlalchemy = "^2.4.1"
flask-migrate = "^2.5.2"
flask-admin = "^1.5.5"
sqlalchemy-utils = "^0.36.1"
phonenumbers = "^8.11.3"
Flask-WTF = "^0.14.3"
flask-login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
wemake-python-styleguide = "^0.13.4"
autopep8 = "^1.5"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
